add products to cart and some fixes